a1/brendan_gordon/TEST_PROGRAMS/invalidtype/Haitong_Yang/invalid4.min
#undeclared var
var x : int;
x = x + y;
